tests/ui/rfcs/rfc-1445-restrict-constants-in-patterns/cant-hide-behind-direct-struct-embedded.stderr
error: constant of non-structural type `NoDerive` in a pattern
  --> $DIR/cant-hide-behind-direct-struct-embedded.rs:22:9
   |
LL | struct NoDerive(#[allow(dead_code)] i32);
   | --------------- `NoDerive` must be annotated with `#[derive(PartialEq)]` to be usable in patterns
...
LL | const WRAP_DIRECT_INLINE: WrapInline = WrapInline(NoDerive(0));
   | ------------------------------------ constant defined here
...
LL |         WRAP_DIRECT_INLINE => { panic!("WRAP_DIRECT_INLINE matched itself"); }
   |         ^^^^^^^^^^^^^^^^^^ constant of non-structural type
   |
note: the `PartialEq` trait must be derived, manual `impl`s are not sufficient; see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details
  --> $DIR/cant-hide-behind-direct-struct-embedded.rs:11:1
   |
LL | impl PartialEq for NoDerive { fn eq(&self, _: &Self) -> bool { false } }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

